# ROS

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  install.bat  install.sh  package-lock.json  package.json  tailwind.config.js
HD/: splash.html
ROS-Landing-Page/: index.html  index.jsx  main.jsx
beta-site/: about.html  index.html  release-notes.html  trust.html
dist-landing/: index.html
docs/: BPS_ENGINE_SPEC.md  Baked_Cockpit.txt  DiamondNotes.txt  Splash_Load.txt  (+4 more)
rust-core/: Cargo.toml  README.md
rust-core/src/: lib.rs
src-tauri/: Cargo.toml  osa-midnight-oil-auto-lock-2026-05-12T23-24-37.732Z.osae  osa-midnight-oil-auto-lock-2026-05-13T02-41-30.940Z.osae  osa-midnight-oil-auto-lock-2026-05-13T22-32-13.515Z.osae  osa-midnight-oil-auto-quit-2026-04-19T18-28-11.492Z.osae  osa-midnight-oil-auto-quit-2026-04-24T23-08-37.794Z.osae  osa-midnight-oil-auto-quit-2026-04-28T02-34-00.634Z.osae  osa-midnight-oil-auto-quit-2026-05-03T17-08-19.730Z.osae  osa-midnight-oil-auto-quit-2026-05-13T01-04-54.396Z.osae  osa-midnight-oil-auto-quit-2026-05-13T01-10-15.973Z.osae  osa-midnight-oil-auto-quit-2026-05-13T03-09-24.943Z.osae  osa-midnight-oil-auto-quit-2026-05-14T13-24-22.782Z.osae  tauri.conf.json
src-tauri/resources/models/citizen-ai/: model.json
src-tauri/resources/models/deepnimsec-dns-v1/: model.json
src-tauri/resources/models/huggingface-llm/: model.json
src-tauri/resources/models/security-model-v1/: model.json
src-tauri/src/: lan_party.rs  lib.rs  license.rs  main.rs  secure_core.rs
(+82 files in other folders)
