[package]
name = "osa-midnight-oil"
version = "0.1.0"
edition = "2021"

[lib]
name = "osa_midnight_oil_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
dirs = "5"
once_cell = "1"
zeroize = "1"
keyring = { version = "3", default-features = true }
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
